--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.56.1",
-        "vite": "^5.0.0"
+        "vite": "^6.4.1"
     },
     "dependencies": {
-        "orgchart": "^5.0.0"
+        "chart.js": "^4.5.1",
+        "orgchart": "^2.0.6"
     }
 }
